[gd_scene load_steps=21 format=3 uid="uid://cc3khxnapw1es"]

[ext_resource type="Script" path="res://enemy/pocong/pocong.gd" id="1_026tr"]
[ext_resource type="Texture2D" uid="uid://bil1rwpa258vo" path="res://enemy/pocong/pocong.png" id="1_s4njc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wasbd"]
size = Vector2(20, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i44x"]
atlas = ExtResource("1_s4njc")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0sdk"]
atlas = ExtResource("1_s4njc")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux3r3"]
atlas = ExtResource("1_s4njc")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_73csx"]
atlas = ExtResource("1_s4njc")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jbip"]
atlas = ExtResource("1_s4njc")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v8r2"]
atlas = ExtResource("1_s4njc")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hynjp"]
atlas = ExtResource("1_s4njc")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha7rm"]
atlas = ExtResource("1_s4njc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w217x"]
atlas = ExtResource("1_s4njc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3mgi"]
atlas = ExtResource("1_s4njc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p280y"]
atlas = ExtResource("1_s4njc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35exx"]
atlas = ExtResource("1_s4njc")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w7w4"]
atlas = ExtResource("1_s4njc")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lkbpb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i44x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0sdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux3r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73csx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jbip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v8r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hynjp")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha7rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w217x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3mgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p280y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35exx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w7w4")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecpus"]
size = Vector2(20, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5pae0"]
size = Vector2(20, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_qotnp"]
radius = 305.002

[node name="pocong" type="CharacterBody2D"]
collision_layer = 64
script = ExtResource("1_026tr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_wasbd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_lkbpb")
animation = &"jump"

[node name="Hitbox" type="Area2D" parent="." groups=["HitboxEnemies"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ecpus")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_5pae0")

[node name="ChaseArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
shape = SubResource("CircleShape2D_qotnp")

[node name="TimerKnockback" type="Timer" parent="."]
one_shot = true

[node name="TimerJump" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="ChaseArea" to="." method="_on_chase_area_area_entered"]
[connection signal="area_exited" from="ChaseArea" to="." method="_on_chase_area_area_exited"]
[connection signal="timeout" from="TimerKnockback" to="." method="_on_timer_knockback_timeout"]
[connection signal="timeout" from="TimerJump" to="." method="_on_timer_jump_timeout"]
